crates/weft-snapshots/tests/snapshots/solid-jsx/example-dialog.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-dialog as solid-jsx
---
import { Show } from "solid-js";

function _on(v) {
  return v === "false" ? false : Boolean(v);
}

function _act(actions, event) {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

export default function WeftScreen(props) {
  return (
    <main data-weft-id="root" aria-label="Files">
      <Show when={_on(props.data?.confirmOpen)}>
        <dialog data-weft-id="confirm" aria-label="Delete file?" open aria-modal="true" onKeyDown={(_e) => { if (_e.key !== "Escape") return; _e.preventDefault(); props.onChange?.("$.confirmOpen", false); _act(props.actions, { id: "confirm", action: "dialog.close" }); }}>
          <div data-weft-id="warn">This cannot be undone.</div>
          <div data-weft-slot="actions">
            <button data-weft-id="cancel" type="button" onClick={(_e) => _act(props.actions, { id: "cancel", action: "dialog.close" })}>Cancel</button>
            <button data-weft-id="ok" type="button" data-variant="danger" onClick={(_e) => _act(props.actions, { id: "ok", action: "file.delete" })}>Delete</button>
          </div>
        </dialog>
      </Show>
    </main>
  );
}
